--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@solana/wallet-standard-features": "^1.3.0",
+    "@supabase/supabase-js": "^2.50.0",
+    "dotenv": "^16.5.0",
     "rxjs": "~7.8.0",
+    "solana": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
